microservices/kubernetes/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: central-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: agroflow.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: central-service
            port:
              number: 8080
